# luminar-assignment

./: CMakeLists.txt  README.md  REPORT.md
scripts/: build_linux.sh  build_windows.bat  generate_linux_makefiles.sh  generate_msvc_project.bat
src/: data_processing.cpp  data_processing.h  data_sink.cpp  data_sink.h  data_source.cpp  data_source.h  main.cpp  pipeline.cpp  pipeline.h  secret_channel.cpp  secret_channel.h  threadsafe_queue.h  types.h
